--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "@tanstack/react-query": "^5.36.2",
     "@tanstack/react-query-devtools": "^5.36.2",
+    "@telegram-web-app/react": "^0.0.1-beta.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -27,7 +28,7 @@
     "@walletconnect/client": "^1.8.0",
     "@web3modal/wagmi": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "encoding": "^0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "^14.2.3",
